docs: neovim and GNU readline keybindings reorg and update xscreen screenshot

--- a/docs/src/content/docs/guides/installation.mdx
+++ b/docs/src/content/docs/guides/installation.mdx
@@ -21,7 +21,7 @@ you will need to provide your own preferences.
   [GNU Stow](https://www.gnu.org/software/stow) is used to manage symlinks and
   it might fail to do so if it finds an existing file such as a default `~/.bashrc`
   and `~/.profile` where it's trying to create a symlink. Ensure any conflicting files
-  are backed up to a non-standard location before retrying.
+  are renamed or backed up to a non-standard location before retrying.
 </Aside>
 
 ## Prerequisites
