docs: add AVANTE based env and update neovim keybindings

--- a/docs/src/content/docs/guides/installation.mdx
+++ b/docs/src/content/docs/guides/installation.mdx
@@ -94,12 +94,14 @@ The table below outlines the expected filenames:
 
 <div class="overview-table">
 
-| Env var             | Filename             | Purpose                                      |
-| ------------------- | -------------------- | -------------------------------------------- |
-| `GITHUB_TOKEN`      | `~/.GITHUB_TOKEN`    | Github CLI                                   |
-| `TINYURL_TOKEN`     | `~/.TINYURL_TOKEN`   | Bash URL `shortener` alias                   |
-| `GEMINI_API_KEY`    | `~/.GEMINI_TOKEN`    | Gemini CLI and Neovim Avante Gemini provider |
-| `ANTHROPIC_API_KEY` | `~/.ANTHROPIC_TOKEN` | Neovim Avante Claude provider                |
+| Env var                    | Filename                     | Purpose                                     |
+| -------------------------- | --------------------------- | -------------------------------------------- |
+| `GITHUB_TOKEN`             | `~/.GITHUB_TOKEN`           | Github CLI                                   |
+| `TINYURL_TOKEN`            | `~/.TINYURL_TOKEN`          | Bash URL `shortener` alias                   |
+| `GEMINI_API_KEY`           | `~/.GEMINI_TOKEN`           | Gemini CLI                                   |
+| `ANTHROPIC_API_KEY`        | `~/.ANTHROPIC_TOKEN`        | Claude code CLI                              |
+| `AVANTE_GEMINI_API_KEY`    | `~/.AVANTE_GEMINI_TOKEN`    | Neovim Avante Gemini provider                |
+| `AVANTE_ANTHROPIC_API_KEY` | `~/.AVANTE_ANTHROPIC_TOKEN` | Neovim Avante Claude provider                |
 
 </div>
 
