--- a/docs/src/content/docs/keybindings/neovim.mdx
+++ b/docs/src/content/docs/keybindings/neovim.mdx
@@ -60,11 +60,12 @@ A comprehensive reference of all custom keybindings configured in Neovim.
 
 ### Mutations
 
-| Key              | Mode           | Description                             |
-| ---------------- | -------------- | --------------------------------------- |
-| `<Ctrl-w>,<Del>` | Normal, Insert | Delete previous word                    |
-| `<Leader>q`      | Normal         | Toggle between single and double quotes |
-| `su`             | Normal         | Surround word with double quotes        |
+| Key              | Mode           | Description                              |
+| ---------------- | -------------- | ---------------------------------------- |
+| `<Ctrl-w>,<Del>` | Normal, Insert | Delete previous word                     |
+| `<Leader>qq`     | Normal         | Surround word with double quotes         |
+| `<Leader>q`      | Normal         | Toggle between single and double quotes  |
+| `<Leader>h`      | Normal         | Toggle cloak on `.env` and `.yaml` files |
 
 ### Folding
 
@@ -74,12 +75,12 @@ A comprehensive reference of all custom keybindings configured in Neovim.
 
 ### Lines
 
-| Key       | Mode           | Description         |
-| --------- | -------------- | ------------------- |
-| `<Tab>`   | Normal, Visual | Indent              |
-| `<S-Tab>` | Normal, Visual | Unindent            |
-| `<A-k>`   | Normal, Visual | Move selection up   |
-| `<A-j>`   | Normal, Visual | Move selection down |
+| Key       | Mode           | Description              |
+| --------- | -------------- | ------------------------ |
+| `<Tab>`   | Normal, Visual | Indent                   |
+| `<S-Tab>` | Normal, Visual | Unindent                 |
+| `<A-k>`   | Normal, Visual | Move line/selection up   |
+| `<A-j>`   | Normal, Visual | Move line/selection down |
 
 ## Buffer
 
